worked on allais, made it pretty. needs reworking and bootstrap implementation.

--- a/otree-testing/allais_paradox/templates/allais_paradox/Gamble_1.html
+++ b/otree-testing/allais_paradox/templates/allais_paradox/Gamble_1.html
@@ -11,6 +11,42 @@
         Please choose your desired option.
     </p>
 
+    <table class="table table-inverse">
+        <thead class="thead-inverse">
+            <tr>
+            <th>Option A:</th>
+            <th>Option B:</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                     <b>33%</b> chance for a payoff of <b>2500<b>
+                </td>
+                <td>
+                    -
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>66%</b> chance for a payoff of <b>2400</b>
+                </td>
+                <td>
+                    <b>100%</b> chance for a payoff of <b>2400</b> 
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>1%</b> chance for a payoff of <b>0 - e.g no payoff<b>
+                </td>
+                <td>
+                    -
+                </td>
+            </tr>
+        </tbody>
+        </table>
+
     {% for field in form %}
         {% formfield field %}
     {% endfor %}
