Reworked JSON; hosted on /AdminReport/session_code
- Using oTree builtin safe_json
- Code is hosted on page, visible and in broken JavaScript

--- a/ebayteam-exitcodes-8b3f811ef643/exit_codes/templates/exit_codes/AdminReport.html
+++ b/ebayteam-exitcodes-8b3f811ef643/exit_codes/templates/exit_codes/AdminReport.html
@@ -1,7 +1,13 @@
-<p>Here is the sorted list of payoffs in round {{ subsession.round_number }}</p>
+Find below Access-Exit-Code pairs.<br><br>
 
-<ul>
-        {%for codepair in AccessExit %}
-            <li>{{ codepair }}</li>
-        {%endfor%}
-</ul>
+<script>
+var AccessExit = {{AccessExit}};
+JSON.stringify(AccessExit, null, "    ");
+</script>
+
+
+
+
+
+<!-- for in browser display -->
+{{AccessExit}}
