Clean up and bug fixes, File customization

--- a/ebayteam-exitcodes-8b3f811ef643/exit_codes/templates/exit_codes/Checkout.html
+++ b/ebayteam-exitcodes-8b3f811ef643/exit_codes/templates/exit_codes/Checkout.html
@@ -8,7 +8,7 @@
 {% block content %}
     <p>
 
-        You have finished the study. Thank you for taking your time! 
+        You have finished the study. Thank you for your time! 
         In order to receive your payment you must copy and paste the 
         following code back to Amazon Mechanical Turk:
 
