--- a/ebayteam-exitcodes-8b3f811ef643/exit_codes/templates/exit_codes/AdminReport.html
+++ b/ebayteam-exitcodes-8b3f811ef643/exit_codes/templates/exit_codes/AdminReport.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <p>
-	Please click on the codes and Ctrl+C or RightClick -> Copy to Clipboard. \n
+	Please click on the codes and Ctrl+C or RightClick -> Copy to Clipboard. <br>
 	If it is not autoselected use Ctrl+A to select all of the text, after clicking inside the textbox.
         <pre>
         <textarea class="form-control"  id="trimmed_codes" rows="3" style="min-width:1; cursor:text; background-color: transparent; border: 0; box-shadow: none;" 
@@ -22,26 +22,24 @@
 {% block scripts %}
 
 	<script>
-	window.onload = function() {
-	var AccessExit = {{AccessExit}};
-	CodesString = JSON.stringify(AccessExit, null, "    ");
-	console.log(CodesString)
-	CodesString = CodesString.replace(/[&\/\\#,+()$~%.'"\[\]*?<>{}]/g, '');
+		window.onload = function() {
+		var AccessExit = {{AccessExit}};
+		CodesString = JSON.stringify(AccessExit, null, "    ");
+		console.log(CodesString)
+		CodesString = CodesString.replace(/[&\/\\#,+()$~%.'"\[\]*?<>{}]/g, '');
 
-	var textarea = $("#trimmed_codes");
-	textarea.val(CodesString);
-	$("textarea").height( $("textarea")[0].scrollHeight );
-	};
-
-
+		var textarea = $("#trimmed_codes");
+		textarea.val(CodesString);
+		$("textarea").height( $("textarea")[0].scrollHeight );
+		};
 	</script>
 
 	<script>
-	var inp = $("#trimmed_codes")[0]; // select the input with proper selector
-	var default_value = inp.value;
-	inp.addEventListener("input", function () { 
-		this.value = default_value;
-	}, false);
+		var inp = $("#trimmed_codes")[0]; // select the input with proper selector
+		var default_value = inp.value;
+		inp.addEventListener("input", function () { 
+			this.value = default_value;
+		}, false);
 	</script>
 	
 {% endblock %}
