--- a/exit_codes/templates/exit_codes/AdminReport.html
+++ b/exit_codes/templates/exit_codes/AdminReport.html
@@ -1,6 +1,3 @@
-{% extends "global/Base.html" %}
-{% load staticfiles otree_tags %}
-
 {% block title %}
 	AccessCode: ExitCode Pairs
 {% endblock %}
@@ -11,7 +8,7 @@
 	If it is not autoselected use Ctrl+A to select all of the text, after clicking inside the textbox.
 
 		
-		<pre id="mturk_codes_json" class = "selectable" style="min-width:1; cursor:text; background-color: light-grey; border: 0; box-shadow: none;">
+		<pre id="mturk_codes_json" class = "selectable light">
 		{{AccessExit}}
 		</pre>
 
@@ -34,10 +31,21 @@
 		-ms-user-select: all; /* Internet Explorer/Edge */
 		user-select: all; /* Chrome and Opera */
 
-	}
-</style>
+		background-color: rgb(245, 245, 245);
 
+		border-style: solid;
+		border-width: 1px;
+		border-radius: 4px;
+		border-color: rgb(204, 204, 204);
+
+		min-width: 100%; 
+		
+		cursor: text; 
+	}
+
+</style>
 {% endblock %}
+
 {% block scripts %}
 
 	<script>
