Fix typo in checkout page

--- a/exit_codes/templates/exit_codes/Checkout.html
+++ b/exit_codes/templates/exit_codes/Checkout.html
@@ -14,7 +14,7 @@
 
         <pre style="text-indent: 0.8em;" class="selectable">{{exit_code}}</pre>
 
-        Your payment will be typically processed within the next 24 hours. If 
+        Your payment will be processed typically within the next 24 hours. If 
         you encounter problems submitting this HIT, please search for a HIT 
         called "ETH DeSciL Trouble Ticket" and report your problem there. <br>
 
