Show Current Round # / num_rounds on each page Remove instructions include from each page

--- a/ultimatum_mturk_chap/templates/ultimatum_mturk_chap/Accept.html
+++ b/ultimatum_mturk_chap/templates/ultimatum_mturk_chap/Accept.html
@@ -2,7 +2,7 @@
 {% load otree static %}
 
 {% block title %}
-        Your role and decision
+        Round {{subsession.round_number}} of {{Constants.num_rounds}}: Your role and decision
 {% endblock %}
 
 {% block content %}
@@ -25,6 +25,6 @@
         </button>
     </div>
 
-    {% include Constants.instructions_template %}
+    <!-- {% include Constants.instructions_template %} -->
 
 {% endblock %}
