--- a/ultimatum_mturk_chap/templates/ultimatum_mturk_chap/Results.html
+++ b/ultimatum_mturk_chap/templates/ultimatum_mturk_chap/Results.html
@@ -2,7 +2,7 @@
 {% load otree static %}
 
 {% block title %}
-    Results
+    Round {{subsession.round_number}} of {{Constants.num_rounds}}: Results
 {% endblock %}
 
 {% block content %}
@@ -29,6 +29,6 @@
     </p>
 
     {% next_button %}
-    {% include Constants.instructions_template %}
+    <!-- {% include Constants.instructions_template %} -->
 
 {% endblock %}
