Fix double payoff/point issue - remove unnecessary payoff cumulation - add proper end results screen

--- a/ultimatum_mturk_chap/templates/ultimatum_mturk_chap/EndResults.html
+++ b/ultimatum_mturk_chap/templates/ultimatum_mturk_chap/EndResults.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <p>
-        Your cumulative payoff across all rounds is {{ player.payoff }}.
+        Your cumulative payoff across all rounds is {{ total_payoff }}.
     </p>
 
     {% next_button %}
