--- a/consent_mturk/templates/consent_mturk/ConsentPage.html
+++ b/consent_mturk/templates/consent_mturk/ConsentPage.html
@@ -2,20 +2,56 @@
 {% load otree static %}
 
 {% block title %}
-    Consent Form 
+    Informed Consent Form 
 {% endblock %}
 
 
 {% block content %}
 
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <h6>Welcome!</h6>
+        This scientific study is conducted by the Swiss Federal Institute of 
+        Technology (ETH) in Zurich, Switzerland.
+    </p>
+    <p>
+        <h6>Confidentiality</h6>
+        The data collected in this study does not include any personally 
+        identifiable information about you. Your data will be kept seperate from
+         your Mturk ID. By participating, you understand and agree that the
+        research data gathered during this study will be used by ETH Zurich and 
+        aggregated results will be published.
+    </p>
+    <p>
+        <h6>Contact Information</h6>
+        If you have any question concerning this study, please write to 
+        <a href="descil@ethz.ch?Subject=Question(s) regarding Session%20{{session.code}}">descil@ethz.ch</a>.
     </p>
 
-    <label>
+    {% comment %} <label>
         I agree:
         <input type="checkbox" id="consent" name="consent" value="I consent" onclick='handleClick(this);'>
     </label>
+    <label>
+        I do not agree:
+        <input type="checkbox" id="disconsent" name="consent" value="I do not consent" onclick='handleClick(this);'>
+    </label> {% endcomment %}
+    <h6>Informed Consent</h6>
+    <div class="form-group required">
+        <label class="col-form-label" for="id_consent_0">I have read the information and want to participate in this study.</label>
+        <div class="controls  field-consent">
+                <button name="consent" value="True" required="" id="id_consent_0" class="btn btn-primary btn-large">
+                    Yes
+                </button>
+
+                <button name="consent" value="False" required="" id="id_consent_1" class="btn btn-primary btn-large">
+                    No
+                </button>
+            <div>
+
+
+            </div>
+        </div>
+</div>
     
     <p>
         <button class="otree-btn-next btn btn-primary" disabled="" style="display:none">Next</button>
