remove 'instructions will remain visible' outdated info

--- a/ultimatum_mturk_chap/templates/ultimatum_mturk_chap/Introduction.html
+++ b/ultimatum_mturk_chap/templates/ultimatum_mturk_chap/Introduction.html
@@ -12,11 +12,11 @@
 
     {% include Constants.instructions_template %}
 
-    <p>
+    {% comment %} <p>
 
         The instructions will remain on your screen for future reference.
 
-    </p>
+    </p> {% endcomment %}
     {% comment %}
         <div id="chat">
             <h5>Global Chat</h5>
