--- a/consent_mturk/templates/consent_mturk/BlockDropouts.html
+++ b/consent_mturk/templates/consent_mturk/BlockDropouts.html
@@ -9,13 +9,13 @@
 
     <p>Unfortunately you were not able to accept the participation in this study on time using the Consent Form, and you were dropped out of this study.</p>
     <div class="alert alert-danger">
-        Please <strong>return this HIT!</strong>
+        <strong>Please return the HIT.</strong>
     </div>
-    <p>
+    {% comment %} <p>
         <h6>Contact Information</h6>
         If you have any question concerning this study, please write to 
         <a href="descil@ethz.ch?Subject=Question(s) regarding Session%20{{session.code}}">descil@ethz.ch</a>.
-    </p>
+    </p> {% endcomment %}
 
 {% endblock %}
 
