Add smoother transition from waiting room lobby to experiment - better consent dropout / deadend check

--- a/exit_codes/templates/exit_codes/DeadEnd.html
+++ b/exit_codes/templates/exit_codes/DeadEnd.html
@@ -8,8 +8,10 @@
 {% block content %}
     <p>
 
-        You have sadly timed out of this study. Please return the HIT.
-
+        You have timed out of this study.
+        <div class="alert alert-danger">
+                <strong>Please return the HIT.</strong>
+            </div>
     </p>
     <br><br>
 
