--- a/otree_mturk_utils/templates/otree_mturk_utils/GenericExtendedWaitPage.html
+++ b/otree_mturk_utils/templates/otree_mturk_utils/GenericExtendedWaitPage.html
@@ -1,36 +1,174 @@
-{% extends 'otree/WaitPage.html' %}
-{% load staticfiles otree_tags %}
+{% extends 'otree/Base.html' %}
+{% load i18n %}
+{% load staticfiles %}
+{% block head_title %}{{ title_text }}{% endblock %}
+
+{% block internal_styles %}
+    {{ block.super }}
+    <style>
+        body {
+            background-color: #c0c0c0;
+        }
+
+        .card {
+            background: white;
+            border: 1px solid #3b84c3;
+            border-radius: 5px;
+            box-shadow: 0 0 20px #999;
+            /*width: 940px; */
+            margin: 22px auto;
+        }
+
+        .card-body {
+            margin-top: 10px;
+        }
+
+        .page-header {
+           border: 1px solid #c0c0c0;
+        }
+
+        .otree-wait-page {
+            max-width:970px
+        }
+
+        .progress-bar {
+            width: 100%;
+        }
+    </style>
+{% endblock %}
+
+{% block body_main %}
+<audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio>
+<div class="otree-wait-page container">
+    <div class="card">
+        <h4 class="otree-wait-page__title card-header">
+            {% block title %}{{ title_text }}{% endblock %}
+        </h4>
+        <div class="card-body">
+            <div class="alert alert-success" id="show-when-group-is-formed" style="display:none;">
+                Enough participants have arrived, you will be transfered to the next page in a couple of seconds.
+            </div>
+            <div id="_otree-server-error" class="alert alert-danger" style="display:none">
+                {% blocktrans trimmed %}An error occurred. Please check the logs or ask the administrator for help.{% endblocktrans %}
+            </div>
+            <div id="error-traceback" class="alert alert-danger" style="display:none"></div>
+            {% block content %}
+            <p class="otree-wait-page__body">{{ body_text }}</p>
+            {% endblock %}
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"></div>
+            </div>
+        </div>
+    </div>
+    {% if view.is_debug|default:False %}
+        {% include 'otree/includes/debug_info.html' %}
+    {% endif %}
+</div>
+{% endblock %}
 
 
+{% block internal_scripts %}
+    {{ block.super }}
+    <!-- this is an HTML file rather than JavaScript static file because context variables need to be passed to it -->
+    <script>
+            function play(){
+                 var audio = document.getElementById("audio");
+                 audio.play();
+                           }
+    </script>
+          
+    <script type="text/javascript">
+$(document).ready(function () {
 
+    new Notification("Name Game HIT is starting",{body:"Enough Mturks have accepted this HIT. Please return to the HIT to complete it."});
 
-{% comment %}
+    var socket;
 
-        If you want to add your own behaviour to the custom wait page, for example, in order to "smooth" the exit of the page when a group is formed, you can replace all the content of this page, including the extension declaration at the top of it, with the complete content of the WaitPage that you can find in WaitPage of the otree core installation that you are using (the template that this file currently extends).
+    initWebSocket();
 
-        For now, you can find that otree core version, for the last version, at this address: https://github.com/oTree-org/otree-core/blob/master/otree/templates/otree/WaitPage.html
+    function initWebSocket() {
 
-        Then you can add your own content, for example in the socket.onmessage part, if you want something special to happen, when the page receives the signal that a group has been formed.
+        var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
+        var ws_path = ws_scheme + '://' + window.location.host + "{{ view.socket_url|safe }}";
+        socket = new ReconnectingWebSocket(ws_path);
+        socket.onmessage = function(e) {
 
-        Be careful, the WaitPage in otree core can change from an oTree version to another: If you update otree core, you might need to adapt this page, with the new otree core WaitPage.html.
+            var data = JSON.parse(e.data);
 
-        You will find an example, in GenericExtendedWaitPageExample1ForOTree140.html, that is based on the WaitPage of oTree core 140. This is just a quick and dirty extension, that only shows an ugly alert box, in order to warn the participant that he will be forwarded to the next page, when the group is matched
-        ((just added: "alert('Enough persons have arrived, you will be transfered to the next page; You will be invited to finish your study at the end of the experiment');"))
+            // Handle errors
+            if (data.error) {
+                // maybe the div's default text doesn't get shown
+                $("#_otree-server-error").text(data.error);
+                $("#_otree-server-error").show();
+                if (data.traceback) {
+                    $("#error-traceback").html('<pre>' + data.traceback + '</pre>');
+                    $("#error-traceback").show();
+                }
+                return;
+            }
+            // What to do for transition
+            $("#show-when-group-is-formed").show();
+            $('#waiting-for').hide();
+            $('#finish_study').hide();
+            $('#otree-timeout-warning').hide();
+            $('#how_many_arrived').html($('#constants_ppg').html());
+            play();
 
-        In the second example, GenericExtendedWaitPageExample2ForOTree140.html, a hidden message is shown via 
-                <div class="well" id="show-when-group-is-formed" style="display:none; color:red;">
-                    <b>Enough persons have arrived, you will be transfered to the next page; You will be invited to finish your study at the end of the experiment.</b>
-                </div>
-
-                and
-                $("#show-when-group-is-formed").show();
-
-        and the redirection is delayed by 10s (10 000 ms)
             window.setInterval(function() {
                   window.location.href = '{{ view.redirect_url|safe }}';
-                }, 10000);
-        instead of just
-                 window.location.href = '{{ view.redirect_url|safe }}';
+                }, 5000);
+           
+            
 
-{% endcomment %}
+        };
+        socket.onopen = function() {
+            console.log('WebSocket connected');
+        };
+        socket.onclose = function() {
+            console.log('WebSocket disconnected');
+        };
+    }
 
+    {% if view.group_by_arrival_time|default:False %}
+
+        {% comment %}
+        We should use an AJAX heartbeat rather than relying on just
+        refreshing the page, because on slow servers, this could take a long time,
+        and could be disruptive.
+        We can do this refresh frequently, without worrying about overloading the server
+        or disrupting the user.
+        And other wait pages in oTree don't refresh frequently, so we should be consistent.
+        The extra AJAX view doesn't really add much complexity.
+        Also it makes it easier for folks to test this functionality.
+        {% endcomment %}
+        function heartbeat() {
+            var args = {
+                type: "GET",
+                url: '{% url "ParticipantHeartbeatGBAT" participant.code %}',
+                // necessary for IE
+                cache: false
+            };
+            $.ajax(args);
+        }
+
+        var SECOND = 1000;
+        window.setInterval(heartbeat, 10 * SECOND);
+
+        {% comment %}
+        Refresh the whole page, because if we just used an AJAX heartbeat,
+        then someone could go offline then comes back online,
+        and then enough people would be online, but nothing happens because
+        try_to_regroup is not re-executed. that only happens with a full page load.
+        {% endcomment %}
+
+        window.setInterval(function() {
+                  window.location.reload();
+                }, 60*SECOND);
+
+
+    {% endif %}
+
+
+ });
+ </script>
+ {% endblock %}
