fix typo in player.dropout_caused flag disabled debug mode on heroku (via env config var) add failsafe to 'accept' page:     if None was contributed, other     player dropped out -> instant reload

--- a/mturk_ultimatum/templates/mturk_ultimatum/Accept.html
+++ b/mturk_ultimatum/templates/mturk_ultimatum/Accept.html
@@ -28,3 +28,15 @@
     <!-- {% include Constants.instructions_template %} -->
 
 {% endblock %}
+
+{% block scripts %}
+<script>
+    window.onload=function() { 
+        var suffered_dropout = '{{ group.amount_offered }}' === 'None'
+        console.log("suffered_dropout: "+ suffered_dropout) 
+        if(suffered_dropout) {
+            window.location.href = '{{ view.redirect_url|safe }}'
+        }
+    }
+</script>
+{% endblock %}
